syntax = "proto3";

package auth_v1;

import "google/protobuf/empty.proto";

option go_package = "users-service/pkg/auth_v1;auth_v1";

service AuthV1 {
  rpc Login(LoginRequest) returns(LoginResponse);
  rpc Logout(LogoutRequest) returns(google.protobuf.Empty);
  rpc GetRefreshToken(GetRefreshTokenRequest) returns(GetRefreshTokenResponse);
  rpc GetAccessToken(GetAccessTokenRequest) returns(GetAccessTokenResponse);
}

message LoginRequest {
  string usernames = 1;
  string password = 2;
}

message LoginResponse{
  string refresh_token = 1;
}

message LogoutRequest{
  string access_token = 1;
}

message GetRefreshTokenRequest {
  string old_refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}
